lex double quotes

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,7 @@ jobs:
   integration:
     strategy:
       matrix:
+        # TODO: write an integration for windows too
         os: [macos-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     
